--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.5.1",
     "gatsby": "^2.23.12",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.12.0",
+    "react-feather": "^2.0.8",
+    "react-icons": "^3.10.0",
+    "react-scrollspy": "^3.4.3",
+    "styled-components": "^5.1.1",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.0.5"
